| Bug #787 | HANDLER without INDEX doesn't work with deleted rows | ||
|---|---|---|---|
| Submitted: | 3 Jul 2003 13:05 | Modified: | 4 Jul 2003 3:55 |
| Reporter: | Georg Richter | Email Updates: | |
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 4.1 | OS: | Linux (Linux) |
| Assigned to: | Ramil Kalimullin | Target Version: | |
[3 Jul 2003 13:05]
Georg Richter
[4 Jul 2003 0:45]
Ramil Kalimullin
It's a bug, I think. These queries: handler a read first limit 2,1; handler a read first limit 3,1; handler a read first limit 4,1; should return 3, 4, 5 correspondingly.
[4 Jul 2003 2:22]
Ramil Kalimullin
IRC discussion: <serg> I think 787 should not produce an error <ramil> just return "empty set"? <serg> error *could* possibly appear if DELETE was used between HANDLER READ and HANDLER NEXT - but even there it would be nice to avoid an error <serg> but in that test case I can see absolutely no reason for an error <ramil> ok, should "handler a read first limit 2,1;" return 3? <serg> why ? I think "handler a read first" should return 3 <ramil> or "handler a read first limit 0,1;" should return 3? <ramil> opps, was too late :) <ramil> so we should just skip deleted records scanning table, right? <serg> of course
[4 Jul 2003 3:55]
Ramil Kalimullin
Thank you for your bug report. This issue has been fixed in the latest
development tree for that product. You can find more information about
accessing our development trees at
http://www.mysql.com/doc/en/Installing_source_tree.html
